add slider information on home page. add some changex in styles, fonts, pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,7 +155,7 @@ button:hover {
   background: none;
   font-size: 12px;
   color: #fff;
-  text-transform: none;
+  text-transform: uppercase;
 }
 
 .language .arrow-select::after {
